Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97857

Item2D shouldn't be always pickable

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.2.3, 6.3
    • 6.2.1
    • Quick: 3D
    • None
    • Qt Quick 3D: Week 44-45, Qt Quick 3D: Week 1 - 2

      Currently it seems that any Quick item (Item2D) in 3D view is pickable, so interfears with the View3D pick() method. Item2Ds are infinite plane (see QTBUG-96457 and QTBUG-93095), but if they have visibility set to false or enabled set to false, I think they should be ignored in picking.

      Test app attached, disabling any checkbox should make clicking to moon work but currently it doesn't.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kagro Kaj Grönholm
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes