Don't make Item2D's always pickable

Enable picking for Item2D only when it contains any items which are
both visible and enabled.

Pick-to: 6.2
Task-number: QTBUG-97857
Change-Id: I56941ba6652239052086dd3e05f1d952747323a5
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>